# edreporter-parser

./: .gitignore  CHANGES.md  FLASK_QUICKSTART.md  QUICKSTART.md  README.md  TEXT_EXTRACTION_IMPROVEMENTS.md  pyproject.toml  spec.md
app/: __init__.py  main.py
app/core/: __init__.py  export_docx.py  extraction.py  heuristics.py  ocr.py  pdf_io.py  segment_model.py  storage.py
app/ui/: __init__.py  annotate.py  canvas_component.py  editor.py  viewer.py
webapp/: __init__.py  app.py  config.py  logger.py  routes.py
webapp/static/css/: main.css
webapp/static/js/: app.js  articles.js  canvas.js
webapp/templates/: base.html  index.html
